...
          }}
        />
        <Tabs.Screen
          name="quests"
          options={{
            title: t("nav.quests"),
            tabBarButtonTestID: "tab-quests",
          }}
        />
        <Tabs.Screen
          name="pvp"
          options={{
            title: t("nav.pvp"),
...
